# viralclip-swarm

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DATA_RETENTION.md  Dockerfile  LICENSE  PITCH_AI_COMPANIES.md  PITCH_CREATORS.md  PRIVACY.md  README.md  RELEASE_SUMMARY.md  SECURITY.md  SHOWCASE.md  showcase-config.json  showcase-smoke.json
.github/workflows/: ci.yml  release-gate.yml  security-audit.yml
.sentrux/: baseline.json
demo/: README.md
demo/presets/creator_minimal/: benchmark.json
demo/presets/creator_neon/: benchmark.json
demo/presets/creator_pro/: benchmark.json
deploy/: README.md  docker-compose.yml  nginx.conf
docs/: DEPLOYMENT_HARDENING_CHECKLIST.md  GITHUB_ABOUT.md  PACKAGING.md  RELEASE_GATE.md  SECRETS.md  SECURITY_ROADMAP.md  SUBTITLE_BENCHMARK.md  VULNERABILITY_DISCLOSURE.md  subtitle-benchmark-manifest.example.json
output/: benchmark.csv
outreach/: FOLLOWUP_WAVE_1.md  PIPELINE_GUIDE.md  PUBLIC_LAUNCH_POSTS.md  README.md  RELEASE_v0.4.0_NOTES.md  WEEK1_EXECUTION_CHECKLIST.md  ai_companies_pitch.md  batch_10_messages.md  feature_matrix.md  influencers_pitch.md  target_pipeline_template.csv
scripts/: generate-preset-demos.ps1  rotate-api-token.ps1  run-full-showcase.ps1  subtitle-benchmark.ps1
src/: ai.rs  lib.rs  main.rs  model.rs  runtime.rs  subtitles.rs
tests/: api_http.rs  e2e.rs
