[package]
name = "viralclip-swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
which = "4.4"
tempfile = "3.10"
hound = "3.5"
anyhow = "1.0"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
colored = "2.0"
regex = "1.10"
csv = "1.2"
chrono = "0.4"
serde_json = "1.0"
