[package]
name = "viralclip-swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
which = "8.0.2"
tempfile = "3.27.0"
hound = "3.5.1"
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.11.0"
colored = "3.1.1"
regex = "1.12.3"
csv = "1.4.0"
chrono = "0.4.44"
serde_json = "1.0.149"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.27.0"
